Сделан полностью Header-logo + Menu  на (100%)

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
 
   </header>
 
+
+  <!-- 
   <section>
     <h1>Новые фильмы</h1>
-  </section>
+  </section> -->
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
