--- a/index.html
+++ b/index.html
@@ -120,20 +120,72 @@
         <div class="site-serch panel panel-info">
           <div class="panel-heading">Поиск</div>
           <div class="panel-body">
-            Поиск по сайту
+            <form action="search"></form>
+
+            <div class="input-group input-group-lg">
+              <input class="form-control" type="search" placeholder="Поиск по сайту">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">
+                  <span class="glyphicon glyphicon-search"></span>
+                </button>
+              </span>
+            </div>
+
+
+
+            <!-- <button class="btn btn-default">Искать</button> -->
+
           </div>
         </div>
 
         <div class="user-login panel panel-info">
           <div class="panel-heading">Пользователь</div>
           <div class="panel-body">
-            Логин
-          </div>
-          <div class="panel-body">
-            Пароль
-          </div>
-          <div class="panel-body">
-            Вход
+
+            <ul class="user-login__tabs nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#user-login-sidebar" aria-controls="user-login-sidebar"
+                  role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                </a>
+              </li>
+              <li role="presentation"><a href="#user-registration-sidebar" aria-controls="user-registration-sidebar"
+                  role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-user"></span>
+                </a>
+              </li>
+            </ul>
+
+            <div class="user-login__content tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
+                <form action="login">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Вход</button>
+                </form>
+              </div>
+
+
+              <div role="tabpanel" class="tab-pane fade" id="user-registration-sidebar">
+                <form action="registration">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="email" placeholder="Email">
+                  </div>
+
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Регистрация</button>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -141,42 +193,114 @@
         <div class="site-news panel panel-info">
           <div class="panel-heading">Новости сайта</div>
           <div class="panel-body">
-            Мы запустили новый сервис -
+
+            <div class="site-news-item">
+              <div class="site-news-item__image thumbnail">
+                <img src="assets/img/75x75.png" alt="Картинка">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Мы запустили новый сервис - КиноМонстр</a>
+              </div>
+              <div class="site-news-item__date">5 декабря 2016</div>
+
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__image thumbnail">
+                <img src="assets/img/75x75.png" alt="Картинка">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">На сайте добавлен новый функционал</a>
+              </div>
+              <div class="site-news-item__date">6 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__image thumbnail">
+                <img src="assets/img/75x75.png" alt="Картинка">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Скорость скачивания фильмов увеличена</a>
+              </div>
+              <div class="site-news-item__date">7 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__image thumbnail">
+                <img src="assets/img/75x75.png" alt="Картинка">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Оптимизирована производительность сервера</a>
+              </div>
+              <div class="site-news-item__date">8 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__image thumbnail">
+                <img src="assets/img/75x75.png" alt="Картинка">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Количество пользователей перевалило за 10 000</a>
+              </div>
+              <div class="site-news-item__date">9 декабря 2016</div>
+            </div>
           </div>
-          <div class="panel-body">
-            На сайте добавлен новый функционал
-          </div>
-          <div class="panel-body">
-            Скорость скачивания
-          </div>
+
+
+
         </div>
 
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
-          <div class="panel-body">
-            Мы запустили новый сервис -
+          <div class="top-films__body panel-body">
+            <div class="top-films__list list-group">
+              <a class="top-films__item list-group-item" href="#">Марсианин
+                <span class="top-films__badge badge">8.9</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Илюзия обмана 2
+                <span class="top-films__badge badge">8.8</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Из машины
+                <span class="top-films__badge badge">8.5</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Люси
+                <span class="top-films__badge badge">8.2</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Выхода нет
+                <span class="top-films__badge badge">8.0</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Стражи галактики
+                <span class="top-films__badge badge">7.9</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Человек муравей
+                <span class="top-films__badge badge">7.7</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Месть от кутюр
+                <span class="top-films__badge badge">7.5</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Люди Икс
+                <span class="top-films__badge badge">7.4</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Занесло
+                <span class="top-films__badge badge">7.3</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Дочь Бога
+                <span class="top-films__badge badge">7.2</span>
+              </a>
+            </div>
           </div>
-          <div class="panel-body">
-            На сайте добавлен новый функционал
-          </div>
-          <div class="panel-body">
-            Скорость скачивания
-          </div>
+
         </div>
-
-
-
 
       </div>
     </div>
-  </div>
 
-  <footer style="background-color: blue;height: 200px"></footer>
-
+    <footer style="background-color: blue;height: 200px"></footer>
 
 
-  <script src="libs/jquery/dist/jquery.min.js"></script>
-  <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="libs/jquery/dist/jquery.min.js"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
