--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       </div>
     </div>
 
-
     <div class="header-menu">
       <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
@@ -47,7 +46,7 @@
           <div class="collapse navbar-collapse" id="navbar-top">
             <ul class="nav navbar-nav navbar-left">
               <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Фильмы</a></li>
+              <li><a href="page.html">Фильмы</a></li>
               <li><a href="#">Сериалы</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
@@ -653,6 +652,7 @@
             </div>
           </div>
         </div>
+
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
           <div class="top-films__body panel-body">
@@ -692,7 +692,6 @@
               </a>
             </div>
           </div>
-
         </div>
 
       </div>
