Сделанa страничка page.html + добавил ссылки на github

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <div class="header-menu">
       <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
-
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-top"
               aria-expanded="false">
@@ -40,9 +39,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
           </div>
-
           <div class="collapse navbar-collapse" id="navbar-top">
             <ul class="nav navbar-nav navbar-left">
               <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
@@ -59,12 +56,9 @@
         </div><!-- /.container -->
       </nav>
     </div>
-
   </header>
-
   <div class="container">
     <div class="row">
-
       <div class=" main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
 
         <section class="site-serch panel panel-info hidden-lg hidden-md">
@@ -113,7 +107,6 @@
                   <button class="btn btn-default btn-block btn-lg" type="submit">Вход</button>
                 </form>
               </div>
-
 
               <div role="tabpanel" class="tab-pane fade" id="user-registration-main">
                 <form action="registration">
@@ -477,19 +470,13 @@
               </div>
             </div>
           </article>
-
-
         </section>
-
-
       </div>
-
 
       <!-- Левый блок -->
 
       <div class=" Left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
         <div class="vertical-slider panel panel-info visible-lg visible-md">
-
           <div id="vertical-carousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -697,8 +684,6 @@
       </div>
     </div>
   </div>
-
-
   <footer class="footer">
     <div class="container-fluid">
       <div class="row">
@@ -716,7 +701,6 @@
                   <li><a href="#">Minus, omnis vel.</a></li>
                 </ul>
               </div>
-
               <div class="footer-second col-md-3 col-xs-6">
                 <h4>Voluptatem, commodi, at.</h4>
                 <ul>
@@ -756,7 +740,7 @@
             <div class="footer-bottom">
 
               <div class="footer-fifth col-xs-12">
-                <strong><a href="https://github.com/Vjacheslav250/kinozal-verstka-na-Bootstrap">
+                <strong><a href="https://vjacheslav250.github.io/kinozal-verstka-na-Bootstrap/">
                     Вёрстка шаблона КиноЗал на Bootstrap v3.4.1.
                     Верстал: студент курса SkillUp FrontEnd. Пометун Вячеслав</a></strong>
               </div>
@@ -768,9 +752,6 @@
 
     </div>
   </footer>
-
-
-
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
