--- a/page.html
+++ b/page.html
@@ -12,14 +12,13 @@
     rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
-  <!--[if lt IE 9]>
+  <!-- <![if lt IE 9]> -->
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+  <!-- <![endif]  -->
 </head>
 
 <body>
-
   <header class="header container-fluid">
     <div class="header-logo row">
       <div class="container">
@@ -27,7 +26,6 @@
         <span class="header-logo__description">Найди свое кино</span>
       </div>
     </div>
-
     <div class="header-menu row">
       <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
@@ -39,7 +37,6 @@
               <span class="icon-bar"></span>
             </button>
           </div>
-
           <div class="collapse navbar-collapse" id="navbar-top">
             <ul class="nav navbar-nav navbar-left">
               <li><a href="index.html">Главная</a></li>
@@ -58,10 +55,8 @@
       </nav>
     </div>
   </header>
-
   <div class="container">
     <div class="row">
-
       <main class="main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
 
         <section class="site-serch panel panel-info hidden-lg hidden-md">
@@ -84,7 +79,6 @@
         <section class="user-login panel panel-info hidden-lg hidden-md">
           <div class="panel-heading">Пользователь</div>
           <div class="panel-body">
-
             <ul class="user-login__tabs nav nav-tabs" role="tablist">
               <li role="presentation" class="active">
                 <a href="#user-login-main" aria-controls="user-login-main" role="tab" data-toggle="tab">
@@ -97,7 +91,6 @@
                 </a>
               </li>
             </ul>
-
             <div class="user-login__content tab-content">
               <div role="tabpanel" class="tab-pane fade in active" id="user-login-main">
                 <form action="login">
@@ -110,8 +103,6 @@
                   <button class="btn btn-default btn-block btn-lg" type="submit">Вход</button>
                 </form>
               </div>
-
-
               <div role="tabpanel" class="tab-pane fade" id="user-registration-main">
                 <form action="registration">
                   <div class="form-group">
@@ -131,7 +122,6 @@
             </div>
           </div>
         </section>
-
         <section class="film-info">
           <h1>Иллюзия обмана 2</h1>
           <div class="embed-responsive embed-responsive-16by9">
@@ -210,24 +200,18 @@
               <li data-target="#vertical-carousel" data-slide-to="1"></li>
               <li data-target="#vertical-carousel" data-slide-to="2"></li>
             </ol>
-
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-
               <div class="item active">
                 <img src="assets/img/films/1263242.jpg" alt="film">
               </div>
-
               <div class="item">
                 <img src="assets/img/films/1289488.jpg" alt="film">
               </div>
-
               <div class="item">
                 <img src="assets/img/films/1401663.jpg" alt="film">
               </div>
-
             </div>
-
             <!-- Controls -->
             <a class="left carousel-control" href="#vertical-carousel" role="button" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -307,8 +291,6 @@
             </div>
           </div>
         </div>
-
-
         <div class="site-news panel panel-info">
           <div class="panel-heading">Новости сайта</div>
           <div class="panel-body">
@@ -321,9 +303,7 @@
                 <a class="site-news-item__link" href="#">Мы запустили новый сервис - КиноМонстр</a>
               </div>
               <div class="site-news-item__date">5 декабря 2016</div>
-
             </div>
-
             <div class="site-news-item">
               <div class="site-news-item__image thumbnail">
                 <img src="assets/img/75x75.png" alt="Картинка">
@@ -333,7 +313,6 @@
               </div>
               <div class="site-news-item__date">6 декабря 2016</div>
             </div>
-
             <div class="site-news-item">
               <div class="site-news-item__image thumbnail">
                 <img src="assets/img/75x75.png" alt="Картинка">
@@ -343,7 +322,6 @@
               </div>
               <div class="site-news-item__date">7 декабря 2016</div>
             </div>
-
             <div class="site-news-item">
               <div class="site-news-item__image thumbnail">
                 <img src="assets/img/75x75.png" alt="Картинка">
@@ -353,7 +331,6 @@
               </div>
               <div class="site-news-item__date">8 декабря 2016</div>
             </div>
-
             <div class="site-news-item">
               <div class="site-news-item__image thumbnail">
                 <img src="assets/img/75x75.png" alt="Картинка">
@@ -406,7 +383,6 @@
             </div>
           </div>
         </div>
-
       </aside>
     </div>
   </div>
@@ -416,9 +392,7 @@
       <div class="row">
         <div class="container">
           <div class="row">
-
             <div class="footer-top">
-
               <div class="footer-first col-md-3 col-xs-6">
                 <h4>Lorem ipsum dolor sit.</h4>
                 <ul>
@@ -428,7 +402,6 @@
                   <li><a href="#">Minus, omnis vel.</a></li>
                 </ul>
               </div>
-
               <div class="footer-second col-md-3 col-xs-6">
                 <h4>Voluptatem, commodi, at.</h4>
                 <ul>
@@ -449,7 +422,6 @@
                   <li><a href="#">Minus, omnis vel.</a></li>
                 </ul>
               </div>
-
               <div class="footer-fourth col-md-3 col-xs-6">
                 <h4>Reiciendis, minima, a?</h4>
                 <ul>
@@ -463,12 +435,11 @@
 
             </div>
           </div>
-
           <div class="row">
             <div class="footer-bottom">
 
               <div class="footer-fifth col-xs-12">
-                <strong><a href="https://github.com/Vjacheslav250/kinozal-verstka-na-Bootstrap">
+                <strong><a href="https://vjacheslav250.github.io/kinozal-verstka-na-Bootstrap/">
                     Вёрстка шаблона КиноЗал на Bootstrap v3.4.1.
                     Верстал: студент курса SkillUp FrontEnd. Пометун Вячеслав</a></strong>
               </div>
@@ -480,8 +451,6 @@
 
     </div>
   </footer>
-
-
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
